--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         </div>
     </div>
     <footer class="footer">Made with <img src="/images/Vector.svg"> by ProGrad</footer>
+    
 </body>
-<script src="src/app.js"></script>
 
+<script src=".src/app.js"></script>
 </html>
